--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Bill Generator",
   "description": "A bill generation app",
-  "repository": "",
+  "repository": "https://github.com/DeepshikaR/CloudApp.git",
   "addons": []
 }
